--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         function gettronweb(){
             if(window.tronWeb && window.tronWeb.defaultAddress.base58){
                 document.write("Yes, catch it:",window.tronWeb.defaultAddress.base58)
+
+                var hash = window.tronWeb.sha3("some string to be hashed");
+                window.tronWeb.sing(hash)
+
             }
+
+            
         }
     </script>
     </body>
