--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 document.write("Yes, catch it:",window.tronWeb.defaultAddress.base58)
 
                 var hash = window.tronWeb.sha3("some string to be hashed");
-                window.tronWeb.sing(hash)
+                await window.tronWeb.sing(hash)
 
             }
 
