--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                         document.writeln("Hash:", hash, "\r\n" )
 
                         var res = await tronweb.trx.sign(hash)
-
-                        tronWeb.trx
-
+aaa
                         document.writeln("\r\nsign:", res, "\r\n" )
                         var res2 = await tronweb.trx.verifyMessage(hash, res, window.tronWeb.defaultAddress.base58)
 
