--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         console.log("\r\nsign:", res, "\r\n" )
                         var res2 = await tronweb.trx.verifyMessage(hash, res, window.tronWeb.defaultAddress.base58)
 
-                        console.log(res)
+                        console.log(res2)
                         
                     }
                 }, 5000)
