--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         console.log(hash)
                         var hash2 = tronweb.sha3(hash)
 
-                        var res = await tronweb.trx.sign(hash)
+                        var res = await tronweb.trx.sign(hash2)
 
                         console.log("\r\nsign:", res, "\r\n" )
                         var res2 = await tronweb.trx.verifyMessage(hash2, res, window.tronWeb.defaultAddress.base58)
